[gd_scene load_steps=12 format=3 uid="uid://bvcgjhxm7wv5f"]

[ext_resource type="PackedScene" uid="uid://c2p2plr1c1v1c" path="res://scenes/items/weapons/melee/melee_weapon.tscn" id="1_51l0f"]
[ext_resource type="Script" path="res://scripts/items/weapons/melee/hoe.gd" id="2_kd036"]
[ext_resource type="Script" path="res://scripts/helper/save_this_wrld/melee_weapon_data.gd" id="3_i2fvd"]
[ext_resource type="Texture2D" uid="uid://bnq7mg4pc5grm" path="res://assets/sprites/weapons/hoe.png" id="3_tl0qe"]
[ext_resource type="Texture2D" uid="uid://c5ttqsvyhfvcv" path="res://assets/sprites/environment/tilled_dirt.png" id="5_r0cai"]

[sub_resource type="Resource" id="Resource_h2l4q"]
script = ExtResource("3_i2fvd")
xp = {
"attack_speed_xp": 0,
"damage_xp": 0,
"elemental_damage_duration_xp": 0,
"elemental_damage_xp": 0,
"knockback_magnitude_xp": 0
}
weapon_scene_path = "res://scenes/items/weapons/melee/hoe.tscn"
damage = 20.0
attack_speed = 1.0
knockback_magnitude = 150.0
elemental_damage_type = 0
elemental_damage = 0.0
elemental_damage_duration = 0.0
mode = 0
rotatable = true
offset = 50.0
item_name = "hoe"
amount_in_stack = 1
stackable = false
item_texture_path = "res://assets/sprites/weapons/hoe.png"
xp_upgrade_values = {}
item_global_position = Vector2(0, 0)
item_type = 0

[sub_resource type="Animation" id="Animation_6rhgp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/PointyThing/Hurtbox/HurtboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Target:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m8k0f"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.349066, 1.74533, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/PointyThing/Hurtbox/HurtboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Target:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6wh7c"]
_data = {
"RESET": SubResource("Animation_6rhgp"),
"attack": SubResource("Animation_m8k0f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifxxk"]
size = Vector2(49, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fa0oy"]
size = Vector2(96, 96)

[node name="Hoe" instance=ExtResource("1_51l0f")]
script = ExtResource("2_kd036")
right_held_down = false
data = SubResource("Resource_h2l4q")

[node name="ItemSprite" parent="." index="1"]
visible = false
scale = Vector2(0.75, 0.75)

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_6wh7c")
}

[node name="Hurtbox" parent="Pivot/PointyThing" index="0"]
collision_mask = 130

[node name="HurtboxCollision" parent="Pivot/PointyThing/Hurtbox" index="0"]
position = Vector2(-57, -145)
shape = SubResource("RectangleShape2D_ifxxk")
disabled = true

[node name="WeaponSprite" parent="Pivot/PointyThing" index="1"]
visible = true
position = Vector2(-35, -67)
rotation = -1.01745
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_tl0qe")

[node name="Target" type="Sprite2D" parent="." index="5"]
visible = false
modulate = Color(1, 0, 0, 0.282353)
position = Vector2(163, -2)
texture = ExtResource("5_r0cai")

[node name="TargetMarker" type="Marker2D" parent="Target" index="0"]
position = Vector2(-3, 2)

[node name="ExclusionZoneDetector" type="Area2D" parent="Target" index="1"]
collision_mask = 72

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/ExclusionZoneDetector" index="0"]
position = Vector2(-3, 2)
shape = SubResource("RectangleShape2D_fa0oy")

[node name="Label" type="Label" parent="." index="6"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8

[connection signal="area_entered" from="Target/ExclusionZoneDetector" to="." method="_on_exclusionzone_detected"]
[connection signal="area_exited" from="Target/ExclusionZoneDetector" to="." method="_on_exclusionzone_undetected"]
